--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="upc.edu.pe.sentinel.MainActivity">
-
-    <LinearLayout
+<!--
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -23,6 +19,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_margin="8dp"
+            android:layout_alignParentLeft="true"
             android:background="@color/colorAccent" />
 
         <TextView
@@ -30,6 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_name"
+            android:layout_toLeftOf="@+id/photoImageView"
             android:textSize="24sp" />
 
         <TextView
@@ -46,8 +44,56 @@
             android:text="@string/app_name"
             android:textSize="14sp" />
 
-    </LinearLayout>
+    </RelativeLayout>
+ -->
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/activity_horizontal_margin">
 
+        <ImageView
+            android:id="@+id/photoImageView"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="8dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorAccent" />
+
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/photoImageView"
+            android:layout_toEndOf="@+id/photoImageView"
+            android:text="@string/app_name"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/emailTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/nameTextView"
+            android:layout_toEndOf="@+id/photoImageView"
+            android:text="@string/app_name"
+            android:textSize="14sp" />
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/emailTextView"
+            android:layout_toEndOf="@+id/photoImageView"
+            android:background="@color/colorAccent"
+            android:backgroundTint="@color/colorAccent"
+            android:onClick="logOut"
+            android:text="@string/log_out"
+            android:textColor="@android:color/white" />
+
+    </RelativeLayout>
+
+ <!--
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,6 +109,6 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:onClick="revoke"
         />
+ -->
 
-
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
