--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CellStyle">
+        <item name="android:layout_marginTop">@dimen/border_size</item>
+        <item name="android:layout_marginLeft">@dimen/border_size</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:gravity">center</item>
+    </style>
+
+    <style name="CellSpacerStyle">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_marginLeft">@dimen/border_size</item>
+        <item name="android:background">@android:color/white</item>
+    </style>
+
 </resources>
