--- a/app/src/main/res/values/dimension.xml
+++ b/app/src/main/res/values/dimension.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="border_size">1px</dimen>
     <dimen name="row_height">54dp</dimen>
+    <dimen name="default_margin">8dp</dimen>
 </resources>
